# ImpressiveAI

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  README.md  conf.py  make.bat
Core/: block_binary.cpp  block_binary.h  block_blas1.cpp  block_blas1.h  block_blas2.cpp  block_blas2.h  block_blas3.cpp  block_blas3.h  block_convert.cpp  block_convert.h  block_generic.h  block_loop.h  block_reduce.cpp  block_reduce.h  block_sort.cpp  block_sort.h  block_tools.cpp  block_tools.h  block_unary.cpp  block_unary.h  convolve.cpp  convolve.h  core.cpp  decomp_cholesky.cpp  decomp_cholesky.h  decomp_eigen.cpp  decomp_eigen.h  decomp_lu.cpp  decomp_lu.h  decomp_qr.cpp  decomp_qr.h  decomp_svd.cpp  decomp_svd.h  decomp_tools.cpp  decomp_tools.h  decomp_tridiag.cpp  decomp_tridiag.h  fft.cpp  fft.h  geometry.cpp  (+42 more)
Core/Include/: block_binary.h  block_convert.h  block_generic.h  block_tools.h  block_unary.h  decomp_eigen.h  decomp_tridiag.h  fft.h  matrix.h  opt_lbfgs.h  opt_linemin.h  opt_vstepgrad.h  random.h  solve.h
Core/Src/: block_blas1.cpp  block_blas3.cpp  block_convert.cpp  convolve.cpp  decomp_cholesky.cpp  decomp_tools.cpp  matrix.cpp  opt_bfgs.cpp  opt_linemin.cpp  opt_powell.cpp  opt_stochastic.cpp  vector.cpp
DebugHacks/: main.cpp
Doc/: index.rst
IO/: meta_io.h
Include/: meta_core.h  meta_sound.h  meta_vision.h
Include/Core/: block_blas2.h  block_loop.h  block_sort.h  decomp_svd.h  opt_bfgs.h  opt_conjgrad.h  permute.h  types.h  utils.h  vector.h
Include/Vision/: image.h
Metaphor.xcodeproj/: project.pbxproj
Metaphor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Src/Core/: block_sort.cpp  decomp_qr.cpp  (+4 more)
UnitTests/: debughacks.cpp
Vision/: image.cpp  image.h  meta_vision.h
(+3 files in other folders)
